[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Advent of code repository of ostormer"
authors = ["Oskar Stormer"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.3"
ruff = "^0.1.5"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W", "B", "E", "ARG"]
